# Real-Time-Embedded-Systems

./: .gitignore  README.md  data-visualizer.py  for-comparison.c  indicator-table.ipynb  rtes-okx.c  visualizer.py
generated-files/moving-averages/: ADA-USDT.txt  BNB-USDT.txt  BTC-USDT.txt  DOGE-USDT.txt  ETH-USDT.txt  LTC-USDT.txt  SOL-USDT.txt  XRP-USDT.txt
generated-files/pearson-correlation-coefficients/: ADA-USDT.txt  BNB-USDT.txt  BTC-USDT.txt  DOGE-USDT.txt  ETH-USDT.txt  LTC-USDT.txt  SOL-USDT.txt  XRP-USDT.txt
makefiles/: CMakeLists.txt  PI.cmake
runtime-log/: final-runtime-log.txt
